--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="styles.scss">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link href="https://static.mybrandnewlogo.com/fonts/15a26115c418cf70.woff2" rel="preload" as="font" crossorigin="" type="font/woff2">
+  <link href="https://static.mybrandnewlogo.com/fonts/f8c1d028eab80594.ttf" rel="preload" as="font" crossorigin="" type="font/ttf">
+  <link href="https://static.mybrandnewlogo.com/fonts/15a26115c418cf70.woff2" rel="preload" as="font" crossorigin="" type="font/woff2">
+  <link href="https://static.mybrandnewlogo.com/fonts/fb8ba3a0fa228848.ttf" rel="preload" as="font" crossorigin="" type="font/ttf">
 </head>
 
 <body>
